Added GitHub action for linter workflow (fixes #7)

--- a/composer.json
+++ b/composer.json
@@ -92,6 +92,7 @@
           "symfony/phpunit-bridge": "^7.1"
         }
       },
+      "friendsofphp/php-cs-fixer": "^3.64",
       "phpunit/phpunit": "^10.0"
     }
   }
