--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,7 +29,7 @@ jobs:
                 uses: shivammathur/setup-php@v2
                 with:
                     coverage: "none"
-                    extensions: "intl, mbstring, pdo_sqlite, zip"
+                    extensions: "intl"
                     php-version: ${{ matrix.php-version }}
                     tools: composer:v2
 
@@ -65,3 +65,12 @@ jobs:
 
             -   name: Run PHP-CS-Fixer
                 run: tools/php-cs-fixer fix --diff --dry-run
+
+            -   name: Run Twig-CS-Fixer
+                run: tools/twig-cs-fixer check --no-cache
+
+            -   name: Run PHPUnit
+                run: tools/phpunit
+
+            -   name: Run PHPStan
+                run: tools/phpstan analyze
