--- a/composer.json
+++ b/composer.json
@@ -1,101 +1,104 @@
 {
-  "name": "mitopp/symfony-template",
-  "description": "A minimal template for symfony projects",
-  "type": "project",
-  "license": "MIT",
-  "minimum-stability": "stable",
-  "prefer-stable": true,
-  "authors": [
-    {
-      "name": "Michael Topp",
-      "email": "michael.topp@outlook.de",
-      "homepage": "https://codeschubser.de",
-      "role": "Developer"
-    }
-  ],
-  "keywords": [
-    "template",
-    "symfony"
-  ],
-  "require": {
-    "php": ">=8.2",
-    "ext-ctype": "*",
-    "ext-iconv": "*",
-    "symfony/console": "7.1.*",
-    "symfony/dotenv": "7.1.*",
-    "symfony/flex": "^2",
-    "symfony/framework-bundle": "7.1.*",
-    "symfony/runtime": "7.1.*",
-    "symfony/yaml": "7.1.*"
-  },
-  "require-dev": {
-    "symfony/debug-bundle": "7.1.*",
-    "symfony/monolog-bundle": "^3.0",
-    "symfony/stopwatch": "7.1.*",
-    "symfony/web-profiler-bundle": "7.1.*"
-  },
-  "config": {
-    "allow-plugins": {
-      "php-http/discovery": true,
-      "symfony/flex": true,
-      "symfony/runtime": true
-    },
-    "sort-packages": true
-  },
-  "autoload": {
-    "psr-4": {
-      "App\\": "src/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "App\\Tests\\Common\\": "tests/Common",
-      "App\\Tests\\Functional\\": "tests/Functional",
-      "App\\Tests\\Unit\\": "tests/Unit"
-    }
-  },
-  "replace": {
-    "symfony/polyfill-ctype": "*",
-    "symfony/polyfill-iconv": "*",
-    "symfony/polyfill-php72": "*",
-    "symfony/polyfill-php73": "*",
-    "symfony/polyfill-php74": "*",
-    "symfony/polyfill-php80": "*",
-    "symfony/polyfill-php81": "*",
-    "symfony/polyfill-php82": "*"
-  },
-  "scripts": {
-    "auto-scripts": {
-      "cache:clear": "symfony-cmd",
-      "assets:install %PUBLIC_DIR%": "symfony-cmd"
-    },
-    "post-install-cmd": [
-      "@auto-scripts"
-    ],
-    "post-update-cmd": [
-      "@auto-scripts"
-    ]
-  },
-  "conflict": {
-    "symfony/symfony": "*"
-  },
-  "extra": {
-    "symfony": {
-      "allow-contrib": false,
-      "require": "7.1.*"
-    },
-    "cotor": {
-      "extensions": {
-        "phpunit/phpunit": {
-          "symfony/browser-kit": "^7.1",
-          "symfony/css-selector": "^7.1",
-          "symfony/phpunit-bridge": "^7.1"
+    "name": "mitopp/symfony-template",
+    "description": "A minimal template for symfony projects",
+    "type": "project",
+    "license": "MIT",
+    "minimum-stability": "stable",
+    "prefer-stable": true,
+    "authors": [
+        {
+            "name": "Michael Topp",
+            "email": "michael.topp@outlook.de",
+            "homepage": "https://codeschubser.de",
+            "role": "Developer"
         }
-      },
-      "friendsofphp/php-cs-fixer": "^3.64",
-      "phpstan/phpstan": "^1.12",
-      "phpunit/phpunit": "^10.0",
-      "vincentlanglet/twig-cs-fixer": "^3.1"
+    ],
+    "keywords": [
+        "template",
+        "symfony"
+    ],
+    "require": {
+        "php": ">=8.2",
+        "ext-ctype": "*",
+        "ext-iconv": "*",
+        "symfony/console": "7.1.*",
+        "symfony/dotenv": "7.1.*",
+        "symfony/flex": "^2",
+        "symfony/framework-bundle": "7.1.*",
+        "symfony/runtime": "7.1.*",
+        "symfony/yaml": "7.1.*"
+    },
+    "require-dev": {
+        "symfony/debug-bundle": "7.1.*",
+        "symfony/monolog-bundle": "^3.0",
+        "symfony/stopwatch": "7.1.*",
+        "symfony/web-profiler-bundle": "7.1.*"
+    },
+    "config": {
+        "allow-plugins": {
+            "php-http/discovery": true,
+            "symfony/flex": true,
+            "symfony/runtime": true
+        },
+        "platform": {
+            "php": "8.2.0"
+        },
+        "sort-packages": true
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\Common\\": "tests/Common",
+            "App\\Tests\\Functional\\": "tests/Functional",
+            "App\\Tests\\Unit\\": "tests/Unit"
+        }
+    },
+    "replace": {
+        "symfony/polyfill-ctype": "*",
+        "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php72": "*",
+        "symfony/polyfill-php73": "*",
+        "symfony/polyfill-php74": "*",
+        "symfony/polyfill-php80": "*",
+        "symfony/polyfill-php81": "*",
+        "symfony/polyfill-php82": "*"
+    },
+    "scripts": {
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+        },
+        "post-install-cmd": [
+            "@auto-scripts"
+        ],
+        "post-update-cmd": [
+            "@auto-scripts"
+        ]
+    },
+    "conflict": {
+        "symfony/symfony": "*"
+    },
+    "extra": {
+        "symfony": {
+            "allow-contrib": false,
+            "require": "7.1.*"
+        },
+        "cotor": {
+            "extensions": {
+                "phpunit/phpunit": {
+                    "symfony/browser-kit": "^7.1",
+                    "symfony/css-selector": "^7.1",
+                    "symfony/phpunit-bridge": "^7.1"
+                }
+            },
+            "friendsofphp/php-cs-fixer": "^3.64",
+            "phpstan/phpstan": "^1.12",
+            "phpunit/phpunit": "^10.0",
+            "vincentlanglet/twig-cs-fixer": "^3.1"
+        }
     }
-  }
 }
